엔진 Hlsl로 구조 변경중.
기존의 fx파일을 버리고 hlsl로 변경하며 구조 수정 중.

--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -9,21 +9,20 @@ Size=306,385
 Collapsed=0
 
 [Window][Another Window]
-ViewportPos=3079,367
-ViewportId=0xA4D966FE
-Size=707,258
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Hello, world!]
-ViewportPos=3182,372
-ViewportId=0xA4D966FE
-Size=707,522
+Pos=1859,563
+Size=566,280
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Hello, world!]
+ViewportPos=1988,219
+ViewportId=0xA4D966FE
+Size=311,303
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=3182,372 Size=707,522 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=707,258 Selected=0xD279B26D
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=707,262 Selected=0xD00C9CD4
+DockNode    ID=0x00000001 Pos=1988,219 Size=311,303 Split=Y
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=566,282 Selected=0xD00C9CD4
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=566,280 Selected=0xD279B26D
 
