--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -39,7 +39,10 @@
     <ClCompile Include="src\DUOLGameEngine\Util\Coroutine\CoroutineHandler.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\ResourceManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\PhysicsManager.cpp" />
-    <ClCompile Include="src\DUOLGameEngine\ECS\Component\StaticMeshRenderer.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\MeshRenderer.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\Camera.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\MeshFilter.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\TPFController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -87,7 +90,12 @@
     <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\CoroutineHandler.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\ResourceManager.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\PhysicsManager.h" />
-    <ClInclude Include="include\DUOLGameEngine\ECS\Component\StaticMeshRenderer.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\MeshRenderer.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\enabled_shared_from_base.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\EngineSpecification.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\Camera.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\MeshFilter.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\SingletonBase_Unique.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\TPFController.h" />
   </ItemGroup>
 </Project>
